# comp-math

./: .clang-format  .gitignore  1.cpp  LICENSE  Makefile  comp-math.cabal
async/: Async.hs
task1/: 1.cpp
task2/: Bisection.hs  Counted.hs  FixedPointIteration.hs  Fractal.hs  Main.hs  Newton.hs  Secants.hs  Utils.hs
task3/: Cargo.toml  main.rs
task4/: integration.c  integration.h  main.c
task5/: Main.hs  Ode.hs  PeanoNat.hs  Vec.hs  VecMath.hs  stiff.c
task6/: .clangd  BVP2.hs  DFT.hs  Main.hs  Makefile  Thomas.hs  Utils.hs  main.c
