cabal-version:      3.4
name:               comp-math
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

executable task2
    import:           warnings
    main-is:          Main.hs
    other-modules:    Bisection, FixedPointIteration, Newton, Secants, Utils, Counted
    build-depends:    base, mtl
    hs-source-dirs:   task2/
    default-language: Haskell2010

executable task2-fractal
    import:           warnings
    main-is:          Fractal.hs
    other-modules:    Utils
    build-depends:    base, mtl, JuicyPixels
    hs-source-dirs:   task2/
    default-language: Haskell2010
