cabal-version:      3.4
name:               comp-math
version:            0.1.0.0
build-type:         Simple

common options
    ghc-options:      -Wall -Wextra -threaded -rtsopts -with-rtsopts=-N8

common shared-properties
    import:           options
    default-language: Haskell2010
    build-depends:    base,
                      extra,
                      safe,
                      mtl,
                      vector,
                      comp-math:async,
                      Chart,
                      Chart-diagrams,
                      filepath,

library async
    import:           options
    build-depends:    base
    exposed-modules:  Async
    hs-source-dirs:   async/
    default-language: Haskell2010

executable task2
    import:           shared-properties
    main-is:          Main.hs
    other-modules:    Bisection, FixedPointIteration, Newton, Secants, Utils, Counted
    hs-source-dirs:   task2/

executable task2-fractal
    import:           shared-properties
    main-is:          Fractal.hs
    other-modules:    Utils
    build-depends:    JuicyPixels
    hs-source-dirs:   task2/

executable task3
    import:           shared-properties
    main-is:          Main.hs
    other-modules:    
    hs-source-dirs:   task3/
