cabal-version:      3.4
name:               comp-math
version:            0.1.0.0
build-type:         Simple

common executable-options
    ghc-options:      -Wall -Wextra -Wno-x-partial -threaded -rtsopts -with-rtsopts=-N8
    default-language: Haskell2010

library async
    ghc-options:      -Wall -Wextra -Wno-x-partial
    default-language: Haskell2010
    build-depends:    base
    exposed-modules:  Async
    hs-source-dirs:   async/

executable task2
    import:           executable-options
    main-is:          Main.hs
    other-modules:    Bisection, FixedPointIteration, Newton, Secants, Utils, Counted
    build-depends:    base,
                      mtl,
                      Chart,
                      Chart-diagrams,
    hs-source-dirs:   task2/

executable task2-fractal
    import:           executable-options
    main-is:          Fractal.hs
    other-modules:    Utils
    build-depends:    base,
                      JuicyPixels
    hs-source-dirs:   task2/

executable task5
    import:           executable-options
    main-is:          Main.hs
    other-modules:    PeanoNat, Vec, VecMath, Ode
    build-depends:    base,
                      ieee754,
                      safe,
                      mtl,
                      comp-math:async,
                      Chart,
                      Chart-diagrams,
    hs-source-dirs:   task5/

executable task6
    import:           executable-options
    main-is:          Main.hs
    other-modules:    BVP2, Thomas, DFT, Utils
    build-depends:    base, safe
    hs-source-dirs:   task6/
